Revision history for Dancer-Plugin-FontSubset

{{$NEXT}}
 [API CHANGES]

 [BUG FIXES]

 [DOCUMENTATION]

 [ENHANCEMENTS]

 [NEW FEATURES]

 [STATISTICS]

0.1.0 2013-06-22
 - First version, unleashed on an unsuspecting world.

 [STATISTICS]
 - code churn: 7 files changed, 1082 insertions(+), 4 deletions(-)
